--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -403,12 +403,19 @@
 						</div>
 						<div class="form-group">
 							<button onclick="addingrow()" class="btn btn-success btn-icon-split " type="submit"
-							        value="Add" id="addrow" style="width:30%">Add
+							        value="Add" id="addrow" style="width:30%"> <span class="icon text-white-50">
+                                            <i class="fas fa-check"></i>
+                                        </span>Add
 							</button>
 							<button class="btn btn-dark btn-icon-split " type="reset" value="Reset" id="clear"
 							        style="width:30%">
 								Cancel
-							</button>
+							</button><a href="#" class="btn btn-success btn-icon-split">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-check"></i>
+                                        </span>
+                                        <span class="text">Split Button Success</span>
+                                    </a>
 						</div>
 
 					</form>
@@ -457,6 +464,11 @@
 												<h1 class="h5 text-gray-900 mb-4"> MO/{{OFId}} </h1>
 											</div>
 										</div>
+										<form class="form-group" method="post">
+											{% csrf_token %}
+											{{formm.project_Reference}}
+											<button type="submit" class="btn btn-secondary"> create </button>
+										</form>
 										<div>
 											<a class="btn btn-outline-primary" href="#" id="add">Add item</a>
 										</div>
@@ -466,6 +478,8 @@
 										<!-- table -->
 
 										<div class="table-responsive">
+
+
 											<table class="test table table-sm" id="itemstab">
 												<thead>
 												<tr>
@@ -473,6 +487,7 @@
 													<th scope="col">Product ID</th>
 													<th scope="col">Designation</th>
 													<th scope="col">Quantity</th>
+
 													<th scope="col"></th>
 												</tr>
 												</thead>
@@ -480,11 +495,11 @@
 
 												{% for piece in piece_list %}
 												<tr>
-													<td>{{piece.id}}</td>
-													<td>{{piece.product_id}}</td>
+													<td>{{piece.id_auto }}</td>
+													<td>{{piece.id_item}}</td>
 													<td>{{piece.designation}}</td>
 													<td>{{piece.quantity}}</td>
-
+													<td><form action="delete/{{piece.id_auto}}"><button>delete {{piece.id_auto}}</button><form action="delete/{{piece.id_auto}}"></td>
 												</tr>
 												{% endfor %}
 												</tbody>
