--- a/templates/index.html
+++ b/templates/index.html
@@ -30,13 +30,13 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gray-900 sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'index' %}">
                 <div class="sidebar-brand-icon ">
 
-                    <img src="{% static 'img/undraw_logo.svg'%}" width="500" height="200" >
+                    <img src="{% static 'img/undraw_logo.svg'%}" width="500" height="200" class="img-fluid" alt="Responsive image" >
                 </div>
 
             </a>
@@ -73,7 +73,7 @@
                         <h6 class="collapse-header">Manage MO:</h6>
                         <a class="collapse-item" href="{% url 'view_mo' %}">View</a>
                         <a class="collapse-item" href="{% url 'create_dem' %}">Create</a>
-                        <a class="collapse-item" href="{% url 'edit_dem' %}">Edit</a>
+                        <a class="collapse-item" href="{% url 'validation' %}">Validation Cycle</a>
 
                     </div>
                 </div>
