--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,7 @@
 
 <body class="bg-gradient-primary">
 
+
     <div class="container">
 
         <!-- Outer Row -->
@@ -42,26 +43,28 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Log in to your account</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" method="POST" action="/creation/loginn">
+                                        {% csrf_token %}
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                            <input type="text" class="form-control form-control-user"
+                                                id="exampleInputEmail" name="exampleInputEmail" aria-describedby="emailHelp"
                                                 placeholder="Enter your ID">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="exampleInputPassword" name="exampleInputPassword" placeholder="Password">
                                         </div>
                                         <div class="form-group">
+
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
                                                 <label class="custom-control-label" for="customCheck">Remember
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="{% url 'index' %}" class="btn btn-primary btn-user btn-block">
+                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                         <hr>
 
 
