--- a/templates/view_mo.html
+++ b/templates/view_mo.html
@@ -12,15 +12,17 @@
 
 	<title> SMART PLATFORM</title>
 
-	<!-- Custom fonts for this template-->
-	<link href="{% static 'vendor/fontawesome-free/css/all.min.css'%} " rel="stylesheet" type="text/css">
+	<!-- Custom fonts for this template -->
+	<link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
 	<link
-			href="{% static 'https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i'%}"
+			href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
 			rel="stylesheet">
 
-	<!-- Custom styles for this template-->
+	<!-- Custom styles for this template -->
 	<link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
-	<link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
+
+	<!-- Custom styles for this page -->
+	<link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css'%}" rel="stylesheet">
 
 </head>
 
@@ -30,15 +32,15 @@
 <div id="wrapper">
 
 	<!-- Sidebar -->
-	<ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion" id="accordionSidebar">
+	<ul class="navbar-nav bg-gray-900 sidebar sidebar-dark accordion" id="accordionSidebar">
 
 		<!-- Sidebar - Brand -->
-		<a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+		<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'index' %}">
 			<div class="sidebar-brand-icon ">
 
-				<img src="{% static 'img/undraw_logo.svg'%}" width="500" height="200">
+				<img src="{% static 'img/undraw_logo.svg'%}" width="400" height="100" class="img-fluid"
+				     alt="Responsive image">
 			</div>
-
 		</a>
 
 		<!-- Divider -->
@@ -73,11 +75,17 @@
 					<h6 class="collapse-header">Manage MO:</h6>
 					<a class="collapse-item active" href="{% url 'view_mo' %}">View</a>
 					<a class="collapse-item" href="{% url 'create_dem' %}">Create</a>
-					<a class="collapse-item" href="{% url 'edit_dem' %}">Edit</a>
+					<a class="collapse-item" href="{% url 'validation' %}">Validation cycle</a>
 
 				</div>
 			</div>
 		</li>
+		<hr class="sidebar-divider">
+
+		<div class="sidebar-heading">
+			Tasks
+		</div>
+
 
 		<!-- Nav Item - Utilities Collapse Menu -->
 		<li class="nav-item">
@@ -102,42 +110,24 @@
 
 		<!-- Heading -->
 		<div class="sidebar-heading">
-			Addons
+			Machines
 		</div>
+
 		<!-- Nav Item - Pages Collapse Menu -->
 		<li class="nav-item">
 			<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
 			   aria-expanded="true" aria-controls="collapsePages">
 				<i class="fas fa-fw fa-folder"></i>
-				<span>Pages</span>
+				<span>Machines</span>
 			</a>
 			<div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
-					<h6 class="collapse-header">Login Screens:</h6>
-					<a class="collapse-item" href="{% url 'login' %}">Login</a>
-					<a class="collapse-item" href="register.html">Register</a>
-					<a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-					<div class="collapse-divider"></div>
-					<h6 class="collapse-header">Other Pages:</h6>
-					<a class="collapse-item" href="404.html">404 Page</a>
-					<a class="collapse-item" href="blank.html">Blank Page</a>
+					<h6 class="collapse-header">Manage machines:</h6>
+					<a class="collapse-item" href="{% url 'Machines' %}">View machines</a>
 				</div>
 			</div>
 		</li>
 
-		<!-- Nav Item - Charts -->
-		<li class="nav-item">
-			<a class="nav-link" href="charts.html">
-				<i class="fas fa-fw fa-chart-area"></i>
-				<span>Charts</span></a>
-		</li>
-
-		<!-- Nav Item - Tables -->
-		<li class="nav-item">
-			<a class="nav-link" href="tables.html">
-				<i class="fas fa-fw fa-table"></i>
-				<span>Tables</span></a>
-		</li>
 
 		<!-- Divider -->
 		<hr class="sidebar-divider d-none d-md-block">
@@ -171,12 +161,10 @@
 					<div class="input-group">
 						<input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
 						       aria-label="Search" aria-describedby="basic-addon2">
-
 						<div class="input-group-append">
 							<button class="btn btn-primary" type="button">
 								<i class="fas fa-search fa-sm"></i>
 							</button>
-
 						</div>
 					</div>
 				</form>
@@ -355,8 +343,7 @@
 								Activity Log
 							</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="{% url 'login' %}" data-toggle="modal"
-							   data-target="#logoutModal">
+							<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
 								<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 								Logout
 							</a>
@@ -372,11 +359,7 @@
 			<div class="container-fluid">
 
 				<!-- Page Heading -->
-				<div class="d-sm-flex align-items-center justify-content-between mb-4">
-					<h1 class="h3 mb-0 text-gray-800">Manufacturing orders</h1>
-					<a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-							class="fas fa-print fa-sm text-white-50"></i> Print</a>
-				</div>
+				<h1 class="h3 mb-2 text-gray-800">Manufacturing Orders history</h1>
 
 				<!-- Content Row -->
 				<div class="card shadow mb-4">
@@ -435,7 +418,12 @@
 									<td></td>
 									<td></td>
 									<td></td>
-									<td></td>
+									<td>
+										<button type="button" class="btn btn-success"><i
+												class="fas fa-edit"></i></button>
+										<button type="button" class="btn btn-danger"><i
+												class="far fa-trash-alt"></i></button>
+									</td>
 								</tr>
 								</tbody>
 							</table>
@@ -443,65 +431,69 @@
 					</div>
 				</div>
 
-				<!-- End of Main Content -->
-
-				<!-- Footer -->
-				<footer class="sticky-footer bg-white">
-					<div class="container my-auto">
-						<div class="copyright text-center my-auto">
-							<span>Copyright &copy; Your Website 2020</span>
-						</div>
-					</div>
-				</footer>
-				<!-- End of Footer -->
-
 			</div>
-			<!-- End of Content Wrapper -->
+			<!-- /.container-fluid -->
 
 		</div>
-		<!-- End of Page Wrapper -->
+		<!-- End of Main Content -->
 
-		<!-- Scroll to Top Button-->
-		<a class="scroll-to-top rounded" href="#page-top">
-			<i class="fas fa-angle-up"></i>
-		</a>
-
-		<!-- Logout Modal-->
-		<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		     aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">×</span>
-						</button>
-					</div>
-					<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-					<div class="modal-footer">
-						<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-						<a class="btn btn-primary" href="{% url 'login' %}">Logout</a>
-					</div>
+		<!-- Footer -->
+		<footer class="sticky-footer bg-white">
+			<div class="container my-auto">
+				<div class="copyright text-center my-auto">
+					<span>Copyright &copy; Your Website 2020</span>
 				</div>
 			</div>
+		</footer>
+		<!-- End of Footer -->
+
+	</div>
+	<!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+	<i class="fas fa-angle-up"></i>
+</a>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+				<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">×</span>
+				</button>
+			</div>
+			<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+			<div class="modal-footer">
+				<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+				<a class="btn btn-primary" href="login.html">Logout</a>
+			</div>
 		</div>
+	</div>
+</div>
 
-		<!-- Bootstrap core JavaScript-->
-		<script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
-		<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
-		<!-- Core plugin JavaScript-->
-		<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+<!-- Core plugin JavaScript-->
+<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
 
-		<!-- Custom scripts for all pages-->
-		<script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+<!-- Custom scripts for all pages-->
+<script src="{% static 'js/sb-admin-2.min.js'%}"></script>
 
-		<!-- Page level plugins -->
-		<script src="{% static 'vendor/chart.js/Chart.min.js'%}"></script>
+<!-- Page level plugins -->
+<script src="{% static 'vendor/datatables/jquery.dataTables.min.js'%}"></script>
+<script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js'%}"></script>
 
-		<!-- Page level custom scripts -->
-		<script src="{% static 'js/demo/chart-area-demo.js'%}"></script>
-		<script src="{% static 'js/demo/chart-pie-demo.js'%}"></script>
+<!-- Page level custom scripts -->
+<script src="{% static 'js/demo/datatables-demo.js'%}"></script>
 
 </body>
 
