--- a/templates/create_resp_prod.html
+++ b/templates/create_resp_prod.html
@@ -81,7 +81,7 @@
 					<h6 class="collapse-header">Manage MO:</h6>
 					<a class="collapse-item" href="{% url 'view_mo' %}">View</a>
 					<a class="collapse-item active" href="{% url 'create_dem' %}">Create</a>
-					<a class="collapse-item" href="#">Validation cycle</a>
+					<a class="collapse-item" href="#">validation cycle</a>
 
 				</div>
 			</div>
