--- a/templates/Tasks.html
+++ b/templates/Tasks.html
@@ -115,11 +115,11 @@
                     <h6 class="collapse-header">Login Screens:</h6>
                     <a class="collapse-item" href="login.html">Login</a>
                     <a class="collapse-item" href="register.html">Register</a>
-                    <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                    <div class="collapse-divider"></div>
+                    <a class="collapse-item" href="forgo
                     <h6 class="collapse-header">Other Pages:</h6>
                     <a class="collapse-item" href="404.html">404 Page</a>
-                    <a class="collapse-item" href="blank.html">Blank Page</a>
+                    <a class="collapse-item" href="blank.html">Blank Page</a>t-password.html">Forgot Password</a>
+                    <div class="collapse-divider"></div>
                 </div>
             </div>
         </li>
