--- a/templates/view_mo.html
+++ b/templates/view_mo.html
@@ -38,7 +38,7 @@
 		<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'index' %}">
 			<div class="sidebar-brand-icon ">
 
-				<img src="{% static 'img/undraw_logo.svg'%}" width="400" height="100" class="img-fluid"
+				<img src="{% static 'img/undraw_logo.svg'%}" width="400" height="100" class="img-fluid "
 				     alt="Responsive image">
 			</div>
 		</a>
@@ -97,9 +97,8 @@
 			<div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
 			     data-parent="#accordionSidebar">
 				<div class="bg-white py-2 collapse-inner rounded">
-					<h6 class="collapse-header">Custom Utilities:</h6>
+					<h6 class="collapse-header">Tasks:</h6>
 					<a class="collapse-item" href="{% url 'Tasks' %}">Create</a>
-					<a class="collapse-item" href="utilities-border.html">View</a>
 
 				</div>
 			</div>
