--- a/templates/task_history.html
+++ b/templates/task_history.html
@@ -74,7 +74,6 @@
 					<h6 class="collapse-header">Manage MO:</h6>
 					<a class="collapse-item" href="{% url 'view_mo' %}">View</a>
 					<a class="collapse-item " href="{% url 'create_dem' %}">Create</a>
-					<a class="collapse-item " href="{% url 'validation' %}">Validation cycle</a>
 
 				</div>
 			</div>
@@ -379,6 +378,8 @@
 								</tr>
 								</thead>
 								<tbody>
+								{% for i in list %}
+
 								<tr>
 									<td></td>
 									<td></td>
@@ -390,8 +391,8 @@
 									<td></td>
 									<td></td>
 
-
 								</tr>
+                                {% endfor %}
 
 								</tbody>
 							</table>
