--- a/templates/changes_history.html
+++ b/templates/changes_history.html
@@ -42,7 +42,7 @@
             {% if i.history_type == "+" %}
             add
             {% elif i.history_type == "-" %}
-            delete
+            d)elete
             {% else %}
             edit
             {% endif %}
