--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -501,6 +501,25 @@
 
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
+                        <div class="d-sm-flex">
+
+   <div class="ml-auto p-4">
+      <div class="card border border-primary" style="width: 17rem;">
+         <div class="card-body">
+             <div class="row">
+             </div>
+            <div class="row">
+               <div class="col-auto">
+                  <div class="h6 font-weight-bold text-primary">Project Reference:</div>
+               </div>
+               <div class="col-auto">
+                  <div class="h6 font-weight-bold">{{proj}}</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
                         <!-- Nested Row within Card Body -->
                         <div>
                             <div>
@@ -600,7 +619,7 @@
                                                 </td>
                                                 <td class="align-middle text-center">
                                                     {% if items.three_d != "" %}
-                                                    <a href="http://192.168.1.20:8000{{items.three_d.url}}"
+                                                    <a href="http://127.0.0.1:8000{{items.three_d.url}}"
                                                        type="button" class="btn btn-primary"><i
                                                             class="far fa-eye"></i></a>
                                                     {% else %}
@@ -610,7 +629,7 @@
                                                     {% endif %}
                                                 </td>
                                                 <td class="align-middle text-center">
-                                                    <a href="http://192.168.1.20:8000{{items.two_d.url}}"
+                                                    <a href="http://127.0.0.1:8000{{items.two_d.url}}"
                                                        class="btn btn-primary"><i
                                                             class="far fa-eye"></i></a>
                                                 </td>
@@ -681,11 +700,16 @@
                                     </span>
                                     </div>
 
+
+
                                     <div class="row">
                                         <div class="col text-right col-sm-6">
-                                            <button class="btn btn-dark" type="submit"
-                                                    value="Submit">Cancel
-                                            </button>
+                                             <form method="POST">
+                                                {% csrf_token %}
+                                                <button class="btn btn-dark" type="submit"
+                                                    value="Submit" name="cancel">Cancel
+                                                </button>
+                                            </form>
                                         </div>
                                         <div class="col text-left col-sm-6">
                                             <form method="POST">
